--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "sideEffects": false,
   "version": "0.1.1",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
