--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
+    "rollup-plugin-multi-entry": "^2.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^27.1.3",
