--- a/package.json
+++ b/package.json
@@ -19,6 +19,21 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "module": "./dist/index.esm.js",
+      "import": "./dist/index.esm.js",
+      "default": "./dist/index.js"
+    },
+    "./react": {
+      "types": "./dist/react.d.ts",
+      "module": "./dist/react.esm.js",
+      "import": "./dist/react.esm.js",
+      "default": "./dist/react.js"
+    }
+  },
   "files": [
     "**"
   ],
