--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "sideEffects": false,
   "version": "0.1.4",
-  "main": "dist/index.js",
+  "main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "exports": {
@@ -25,13 +25,13 @@
       "types": "./dist/index.d.ts",
       "module": "./dist/index.esm.js",
       "import": "./dist/index.esm.js",
-      "default": "./dist/index.js"
+      "default": "./dist/index.esm.js"
     },
     "./react": {
       "types": "./dist/react.d.ts",
       "module": "./dist/react.esm.js",
       "import": "./dist/react.esm.js",
-      "default": "./dist/react.js"
+      "default": "./dist/react.esm.js"
     }
   },
   "files": [
