--- a/package.json
+++ b/package.json
@@ -15,21 +15,11 @@
     "hooks"
   ],
   "sideEffects": false,
-  "version": "0.2.0",
+  "version": "0.2.1",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    },
-    "./react": {
-      "types": "./dist/react.d.ts",
-      "default": "./dist/react.js"
-    }
-  },
   "files": [
     "**"
   ],
