--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "module": "es2015",
+    "target": "ESNext",
+    "module": "ESNext",
     "moduleResolution": "node",
-    "lib": ["es2017", "es7", "es6", "dom"],
+    // "lib": ["es2017", "es7", "es6", "dom"],
     "declaration": true,
     "strict": true,
     "jsx": "react-jsx",
