--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "hmecs",
+  "name": "miniplex",
   "author": {
     "name": "Hendrik Mans",
     "email": "hendrik@mans.de",
     "url": "https://hendrik.mans.de"
   },
-  "description": "Hendrik Mans' pragmatic little ECS implementation.",
-  "homepage": "https://github.com/hmans/hmecs",
+  "description": "Joyfully minimal ECS with a focus on Developer Experience.",
+  "homepage": "https://github.com/hmans/miniplex",
   "keywords": [
-    "react",
+    "gamedev",
     "ecs",
+    "react",
+    "entity-component-system",
     "state",
     "state-management",
     "hooks"
   ],
   "sideEffects": false,
-  "version": "0.2.4",
+  "version": "0.3.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "**"
+    "dist/**",
+    "LICENSE",
+    "README.md"
   ],
   "license": "MIT",
   "scripts": {
