--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "sideEffects": false,
   "version": "0.5.4",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
