--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "ES2017",
+    "module": "ES2015",
     "moduleResolution": "node",
     // "lib": ["es2017", "es7", "es6", "dom"],
     "declaration": true,
