add react types

--- a/react/package.json
+++ b/react/package.json
@@ -1,4 +1,5 @@
 {
   "main": "dist/miniplex-react.cjs.js",
-  "module": "dist/miniplex-react.esm.js"
+  "module": "dist/miniplex-react.esm.js",
+  "types": "dist/miniplex-react.cjs.d.ts"
 }
