--- a/package.json
+++ b/package.json
@@ -10,26 +10,17 @@
   "keywords": [
     "gamedev",
     "ecs",
-    "react",
     "entity-component-system",
     "state",
-    "state-management",
-    "hooks"
+    "state-management"
   ],
   "sideEffects": false,
   "version": "0.7.2",
   "main": "dist/miniplex.cjs.js",
   "module": "dist/miniplex.esm.js",
   "types": "dist/miniplex.cjs.d.ts",
-  "preconstruct": {
-    "entrypoints": [
-      "index.ts",
-      "react.tsx"
-    ]
-  },
   "files": [
     "dist/**",
-    "react/**",
     "LICENSE",
     "README.md"
   ],
@@ -45,37 +36,20 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@preconstruct/cli": "^2.1.5",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.13",
     "jest": "^27.5.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "tslib": "^2.0.3",
     "typedoc": "^0.22.13",
     "typescript": "^4.6.2"
   },
-  "peerDependencies": {
-    "react": ">=16.8"
-  },
   "babel": {
     "presets": [
       "@babel/preset-env",
-      "@babel/preset-react",
-      [
-        "@babel/preset-typescript",
-        {
-          "isTSX": true,
-          "allExtensions": true
-        }
-      ]
+      "@babel/preset-typescript"
     ]
   }
 }
