--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "state-management"
   ],
   "sideEffects": false,
-  "version": "0.7.2",
+  "version": "0.8.0-0",
   "main": "dist/miniplex.cjs.js",
   "module": "dist/miniplex.esm.js",
   "types": "dist/miniplex.cjs.d.ts",
