--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "docs": "typedoc src/index.ts"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@preconstruct/cli": "^2.1.5",
@@ -51,5 +52,8 @@
       "@babel/preset-env",
       "@babel/preset-typescript"
     ]
+  },
+  "dependencies": {
+    "@hmans/signal": "^0.1.7"
   }
 }
