--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@changesets/cli": "^2.22.0",
     "@preconstruct/cli": "^2.1.5",
     "@types/jest": "^27.4.0",
     "jest": "^27.5.1",
