--- a/package.json
+++ b/package.json
@@ -1,60 +1,36 @@
 {
-  "name": "miniplex",
-  "author": {
-    "name": "Hendrik Mans",
-    "email": "hendrik@mans.de",
-    "url": "https://hendrik.mans.de"
-  },
-  "description": "A developer-friendly entity management system for games and similarly demanding applications, based on ECS architecture.",
-  "homepage": "https://github.com/hmans/miniplex",
-  "keywords": [
-    "gamedev",
-    "ecs",
-    "entity-component-system",
-    "state",
-    "state-management"
-  ],
-  "sideEffects": false,
-  "version": "0.8.0-2",
-  "main": "dist/miniplex.cjs.js",
-  "module": "dist/miniplex.esm.js",
-  "types": "dist/miniplex.cjs.d.ts",
-  "files": [
-    "dist/**",
-    "LICENSE",
-    "README.md"
-  ],
+  "name": "miniplex-project",
+  "private": true,
+  "version": "0.2.0",
   "license": "MIT",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "clean": "rimraf dist",
-    "dev": "preconstruct watch",
+    "postinstall": "preconstruct dev && manypkg check",
+    "dev": "preconstruct dev",
     "build": "preconstruct build",
-    "release": "yarn ci && yarn publish",
     "test": "jest",
-    "ci": "yarn clean & yarn build && yarn test",
-    "docs": "typedoc src/index.ts"
+    "ci": "preconstruct validate && manypkg check && yarn build && yarn test",
+    "release": "yarn ci && yarn changeset publish"
   },
-  "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@changesets/cli": "^2.22.0",
-    "@preconstruct/cli": "^2.1.5",
-    "@types/jest": "^27.4.0",
-    "jest": "^27.5.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "tslib": "^2.0.3",
-    "typedoc": "^0.22.13",
-    "typescript": "^4.6.2"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-typescript"
+  "preconstruct": {
+    "packages": [
+      "packages/*"
     ]
   },
+  "prettier": {
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": false,
+    "arrowParens": "always",
+    "printWidth": 80
+  },
   "dependencies": {
-    "@hmans/signal": "^0.1.7"
+    "@changesets/cli": "^2.22.0",
+    "@manypkg/cli": "^0.19.1",
+    "@preconstruct/cli": "^2.1.5"
   }
 }
