--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,13 @@
     "target": "ES2017",
     "module": "ES2015",
     "moduleResolution": "node",
-    // "lib": ["es2017", "es7", "es6", "dom"],
     "declaration": true,
     "strict": true,
+    "jsx": "react",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "outDir": "./dist",
     "isolatedModules": true
   },
-  "include": ["src/**/*"],
+  "include": ["packages/**/src/**/*", "packages/**/test/**/*"],
   "exclude": ["node_modules", "dist"]
 }
