--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -49,7 +49,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.13",
     "jest": "^27.5.1",
-    "miniplex": "^0.8.0-2",
+    "miniplex": "^0.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
@@ -62,7 +62,7 @@
     "@hmans/react-toolbox": "^0.1.4"
   },
   "peerDependencies": {
-    "miniplex": ">= 0.8.0-2",
+    "miniplex": ">=0.8.0",
     "react": ">=16.8"
   },
   "babel": {
