Fix repository URL for miniplex-react

--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -6,7 +6,7 @@
     "url": "https://hendrik.mans.de"
   },
   "description": "React glue for Miniplex.",
-  "homepage": "https://github.com/hmans/miniplex-react",
+  "homepage": "https://github.com/hmans/miniplex",
   "keywords": [
     "gamedev",
     "ecs",
