--- a/packages/miniplex/package.json
+++ b/packages/miniplex/package.json
@@ -41,12 +41,14 @@
     "@changesets/cli": "^2.22.0",
     "@preconstruct/cli": "^2.1.5",
     "@types/jest": "^27.4.0",
+    "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "tslib": "^2.0.3",
     "typedoc": "^0.22.13",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
     "@hmans/signal": "^0.1.7"
