--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -37,26 +37,27 @@
     "docs": "typedoc src/index.ts"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@changesets/cli": "^2.22.0",
-    "@preconstruct/cli": "^2.1.5",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@changesets/cli": "^2.24.2",
+    "@preconstruct/cli": "^2.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.2",
-    "jest": "^27.5.1",
+    "@types/jest": "^28.1.6",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "miniplex": "^0.10.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^28.0.7",
     "tslib": "^2.4.0",
-    "typedoc": "^0.22.17",
-    "typescript": "^4.7.3"
+    "typedoc": "^0.23.10",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@hmans/react-toolbox": "^0.1.4",
