--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@changesets/cli": "^2.24.2",
     "@manypkg/cli": "^0.19.1",
     "@preconstruct/cli": "^2.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.20",
