--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "react": "^18.2.0",
