--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -37,7 +37,7 @@
     "react-merge-refs": "^1.1.0"
   },
   "peerDependencies": {
-    "miniplex": ">=0.9.0",
+    "miniplex": "^0.10.0",
     "react": ">=16.8"
   }
 }
