Back into peerDeps

--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -28,15 +28,16 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "miniplex": "0.11.0-next.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@hmans/react-toolbox": "^0.1.4",
-    "miniplex": "^0.11.0-next.0",
     "react-merge-refs": "^1.1.0"
   },
   "peerDependencies": {
+    "miniplex": "^0.11.0-next.0",
     "react": ">=16.8"
   }
 }
