Clean and typing improvements

--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@hmans/react-toolbox": "^0.1.4",
+    "@hmans/use-const": "^0.0.1",
+    "@hmans/use-rerender": "^0.0.2",
     "react-merge-refs": "^1.1.0"
   },
   "peerDependencies": {
