--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.8.10",
     "miniplex": "workspace:2.0.0-next.1",
     "miniplex-react": "workspace:^2.0.0-next.2",
+    "randomish": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.145.0"
