--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.145.0",
+    "three-stdlib": "^2.17.2",
     "vfx-composer": "^0.4.0",
     "vfx-composer-r3f": "^0.4.0"
   },
