--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniplex-react",
+  "name": "@miniplex/react",
   "author": {
     "name": "Hendrik Mans",
     "email": "hendrik@mans.de",
