--- a/packages/miniplex/package.json
+++ b/packages/miniplex/package.json
@@ -35,17 +35,22 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@miniplex/core": "2.0.0-next.3",
-    "@miniplex/react": "2.0.0-next.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@hmans/use-const": "^0.0.1",
     "@hmans/use-rerender": "^0.0.2",
+    "@miniplex/core": "2.0.0-next.3",
+    "@miniplex/react": "2.0.0-next.3",
     "react-merge-refs": "^1.1.0"
   },
   "peerDependencies": {
     "react": ">=16.8"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    }
   }
 }
