--- a/packages/miniplex/package.json
+++ b/packages/miniplex/package.json
@@ -10,11 +10,9 @@
   "keywords": [
     "gamedev",
     "ecs",
-    "react",
     "entity-component-system",
     "state",
-    "state-management",
-    "hooks"
+    "state-management"
   ],
   "sideEffects": false,
   "version": "2.0.0-next.3",
