--- a/packages/miniplex/package.json
+++ b/packages/miniplex/package.json
@@ -37,11 +37,8 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@hmans/use-const": "^0.0.1",
-    "@hmans/use-rerender": "^0.0.2",
     "@miniplex/core": "2.0.0-next.3",
-    "@miniplex/react": "2.0.0-next.3",
-    "react-merge-refs": "^1.1.0"
+    "@miniplex/react": "2.0.0-next.3"
   },
   "peerDependencies": {
     "react": ">=16.8"
