Change package structure (#182)

--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniplex",
+  "name": "@miniplex/core",
   "author": {
     "name": "Hendrik Mans",
     "email": "hendrik@mans.de",
@@ -16,36 +16,16 @@
   ],
   "sideEffects": false,
   "version": "2.0.0-next.3",
-  "main": "dist/miniplex.cjs.js",
-  "module": "dist/miniplex.esm.js",
-  "types": "dist/miniplex.cjs.d.ts",
-  "preconstruct": {
-    "entrypoints": [
-      "index.ts",
-      "react.ts"
-    ]
-  },
+  "main": "dist/miniplex-core.cjs.js",
+  "module": "dist/miniplex-core.esm.js",
+  "types": "dist/miniplex-core.cjs.d.ts",
   "files": [
-    "react/**",
     "dist/**",
     "LICENSE",
     "README.md"
   ],
   "license": "MIT",
-  "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "dependencies": {
-    "@miniplex/core": "2.0.0-next.3",
-    "@miniplex/react": "2.0.0-next.3"
-  },
-  "peerDependencies": {
-    "react": ">=16.8"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    }
+    "@hmans/event": "^0.0.1"
   }
 }
