--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniplex-react",
+  "name": "@miniplex/react",
   "author": {
     "name": "Hendrik Mans",
     "email": "hendrik@mans.de",
@@ -28,7 +28,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "miniplex": "2.0.0-next.3",
+    "@miniplex/core": "2.0.0-next.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -38,7 +38,7 @@
     "react-merge-refs": "^1.1.0"
   },
   "peerDependencies": {
-    "miniplex": "^2.0.0-next.0",
+    "@miniplex/core": "^2.0.0-next.0",
     "react": ">=16.8"
   }
 }
