--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -25,7 +25,17 @@
     "README.md"
   ],
   "license": "MIT",
+  "scripts": {
+    "benchmark": "ts-node benchmark.ts",
+    "build": "preconstruct build"
+  },
   "dependencies": {
     "@hmans/event": "^0.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.0",
+    "benny": "^3.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
