--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "packages/*"
   ],
   "scripts": {
+    "benchmark": "pnpm -r benchmark",
     "postinstall": "preconstruct dev",
     "dev": "preconstruct dev",
     "demo": "pnpm dev && pnpm -F demo dev",
