--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -26,7 +26,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "benchmark": "ts-node benchmark.ts",
+    "benchmark": "ts-node -O '{\"module\": \"commonjs\"}' benchmark.ts",
     "build": "preconstruct build"
   },
   "dependencies": {
