--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -15,10 +15,12 @@
     "@react-three/fiber": "^8.8.10",
     "material-composer": "^0.2.6",
     "miniplex": "workspace:2.0.0-next.6",
+    "postprocessing": "^6.28.7",
     "r3f-perf": "^6.5.0",
     "randomish": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "render-composer": "^0.2.6",
     "three": "^0.145.0",
     "three-stdlib": "^2.17.2",
     "vfx-composer": "^0.4.0",
