--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.8.10",
     "material-composer": "^0.2.6",
+    "material-composer-r3f": "^0.2.5",
     "miniplex": "workspace:2.0.0-next.7",
     "postprocessing": "^6.28.7",
     "r3f-perf": "^6.5.0",
@@ -21,6 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "render-composer": "^0.2.6",
+    "shader-composer": "^0.4.6",
+    "shader-composer-toybox": "^0.1.3",
     "three": "^0.145.0",
     "three-stdlib": "^2.17.2",
     "vfx-composer": "^0.4.0",
