--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@hmans/r3f-animate": "^0.0.5",
+    "@hmans/use-const": "^0.0.1",
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.8.10",
     "material-composer": "^0.2.6",
+    "material-composer-r3f": "^0.2.5",
     "miniplex": "workspace:2.0.0-next.7",
+    "postprocessing": "^6.28.7",
     "r3f-perf": "^6.5.0",
     "randomish": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "render-composer": "^0.2.7",
+    "shader-composer": "^0.4.6",
+    "shader-composer-toybox": "^0.1.3",
     "three": "^0.145.0",
     "three-stdlib": "^2.17.2",
     "vfx-composer": "^0.4.0",
