--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hmans/id": "workspace:^0.0.1",
     "@hmans/r3f-animate": "^0.0.5",
     "@hmans/use-const": "^0.0.1",
     "@react-three/drei": "^9.34.3",
     "@react-three/fiber": "^8.8.10",
+    "add": "^2.0.6",
     "material-composer": "^0.2.6",
     "material-composer-r3f": "^0.2.5",
     "miniplex": "workspace:2.0.0-next.7",
