--- a/apps/vanilla-demo/package.json
+++ b/apps/vanilla-demo/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/three": "^0.144.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "three": "^0.145.0"
   }
 }
