--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "benchmark": "pnpm -r benchmark",
     "postinstall": "preconstruct dev",
     "dev": "preconstruct dev",
-    "demo": "pnpm dev && pnpm -F demo dev",
+    "demo:react": "pnpm dev && pnpm -F demo dev",
+    "demo:vanilla": "pnpm dev && pnpm -F vanilla-demo dev",
     "build": "preconstruct build",
     "test": "jest",
     "ci": "preconstruct validate && pnpm build && pnpm test",
