--- a/packages/miniplex/package.json
+++ b/packages/miniplex/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@hmans/queue": "^0.0.1",
     "@miniplex/core": "2.0.0-next.16",
     "@miniplex/react": "2.0.0-next.15"
   },
