--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
+    "chalk": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
