--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "tslib": "^2.4.1",
     "typedoc": "^0.23.19",
     "typescript": "^4.8.4"
+  },
+  "stackblitz": {
+    "startCommand": "pnpm demo:react"
   }
 }
