--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -7,23 +7,23 @@
   },
   "type": "module",
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7",
     "@mdx-js/rollup": "^2.1.5",
+    "@tailwindcss/typography": "^0.5.7",
     "solid-start-node": "^0.2.0",
-    "typescript": "^4.8.4",
     "tailwindcss": "^3.2.0",
-    "vite": "^3.1.8",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8"
   },
   "dependencies": {
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
+    "rollup": "^3.2.5",
     "solid-js": "^1.6.0",
     "solid-mdx": "^0.0.6",
     "solid-start": "^0.2.0",
     "solid-start-mdx": "0.2.3",
-    "solid-start-netlify": "0.2.3",
-    "rollup": "^3.2.5",
+    "solid-start-vercel": "^0.2.3",
     "undici": "^5.11.0"
   },
   "engines": {
