--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "devDependencies": {
     "@mdx-js/rollup": "^2.1.5",
-    "solid-start-node": "^0.2.0",
+    "solid-start-node": "^0.2.5",
     "tippy.js": "^6.3.7",
     "typescript": "^4.8.4",
     "vite": "^3.1.8"
@@ -17,11 +17,12 @@
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
     "rollup": "^3.2.5",
+    "sass": "^1.56.0",
     "solid-js": "^1.6.0",
     "solid-mdx": "^0.0.6",
-    "solid-start": "^0.2.0",
-    "solid-start-mdx": "0.2.3",
-    "solid-start-vercel": "^0.2.3",
+    "solid-start": "^0.2.5",
+    "solid-start-mdx": "0.2.5",
+    "solid-start-vercel": "^0.2.5",
     "undici": "^5.11.0"
   },
   "engines": {
