--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,7 +9,6 @@
   "devDependencies": {
     "@mdx-js/rollup": "^2.1.5",
     "solid-start-node": "^0.2.5",
-    "tippy.js": "^6.3.7",
     "typescript": "^4.8.4",
     "vite": "^3.1.8"
   },
@@ -22,8 +21,7 @@
     "solid-mdx": "^0.0.6",
     "solid-start": "^0.2.5",
     "solid-start-mdx": "0.2.5",
-    "solid-start-vercel": "^0.2.5",
-    "undici": "^5.11.0"
+    "solid-start-vercel": "^0.2.5"
   },
   "engines": {
     "node": ">=16"
