--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,5 +1,7 @@
 {
   "name": "website",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "solid-start dev",
     "build": "solid-start build",
@@ -25,8 +27,5 @@
     "solid-start-static": "npm:@vinxi/solid-start-static@^0.2.5",
     "solid-start-vercel": "^0.2.5",
     "undici": "^5.12.0"
-  },
-  "engines": {
-    "node": ">=16"
   }
 }
