--- a/apps/vanilla-demo/package.json
+++ b/apps/vanilla-demo/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "fp-ts": "^2.13.1",
-    "miniplex": "workspace:2.0.0-next.20",
+    "miniplex": "workspace:2.0.0-beta.1",
     "randomish": "^0.1.6",
     "three": "^0.145.0"
   }
