--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -17,7 +17,7 @@
     "hooks"
   ],
   "sideEffects": false,
-  "version": "2.0.0-next.20",
+  "version": "2.0.0-beta.1",
   "main": "dist/miniplex-react.cjs.js",
   "module": "dist/miniplex-react.esm.js",
   "types": "dist/miniplex-react.cjs.d.ts",
@@ -28,7 +28,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@miniplex/core": "2.0.0-next.20",
+    "@miniplex/core": "2.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -38,7 +38,7 @@
     "react-merge-refs": "^1.1.0"
   },
   "peerDependencies": {
-    "@miniplex/core": "^2.0.0-next.0",
+    "@miniplex/core": "^2.0.0-beta.1",
     "react": ">=16.8"
   }
 }
