--- a/apps/website/.gitignore
+++ b/apps/website/.gitignore
@@ -1,24 +1,3 @@
-
-dist
-.solid
-.output
-.vercel
-.netlify
-netlify
-
-# dependencies
-/node_modules
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-*.launch
-.settings/
-
-# Temp
-gitignore
-
-# System Files
-.DS_Store
-Thumbs.db
+/_bin
+/_site
+/_cache
