--- a/packages/miniplex-bucket/package.json
+++ b/packages/miniplex-bucket/package.json
@@ -29,7 +29,7 @@
     "build": "preconstruct build"
   },
   "dependencies": {
-    "@hmans/event": "^0.2.0"
+    "eventery": "^0.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
