--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@hmans/event": "^0.2.0",
+    "@hmans/id": "^0.0.1",
     "@miniplex/bucket": "workspace:2.0.0-beta.3"
   },
   "devDependencies": {
