--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -9,26 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hmans/r3f-animate": "^0.0.5",
-    "@hmans/use-const": "^0.0.1",
     "@react-three/drei": "^9.78.1",
     "@react-three/fiber": "^8.13.4",
-    "add": "^2.0.6",
-    "material-composer": "^0.2.6",
-    "material-composer-r3f": "^0.2.5",
     "miniplex": "workspace:2.0.0-beta.3",
     "postprocessing": "^6.32.2",
     "r3f-perf": "^6.7.0",
     "randomish": "^0.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "render-composer": "^0.2.8",
-    "shader-composer": "^0.4.9",
-    "shader-composer-toybox": "^0.1.3",
     "three": "^0.154.0",
-    "three-stdlib": "^2.23.13",
-    "vfx-composer": "^0.4.0",
-    "vfx-composer-r3f": "^0.4.0"
+    "three-stdlib": "^2.23.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
