--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.78.1",
     "@react-three/fiber": "^8.13.4",
     "miniplex": "workspace:2.0.0-beta.4",
+    "miniplex-react": "workspace:2.0.0-beta.4",
     "postprocessing": "^6.32.2",
     "r3f-perf": "^7.1.2",
     "randomish": "^0.1.6",
