--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -28,7 +28,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "miniplex": "2.0.0-beta.4",
+    "miniplex": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
