--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -36,7 +36,6 @@
   "devDependencies": {
     "@types/node": "^20.4.1",
     "chalk": "^4.1.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.1"
   }
 }
