--- a/packages/miniplex-react/package.json
+++ b/packages/miniplex-react/package.json
@@ -34,8 +34,7 @@
   },
   "dependencies": {
     "@hmans/use-const": "^0.0.1",
-    "@hmans/use-rerender": "^0.0.2",
-    "react-merge-refs": "^1.1.0"
+    "@hmans/use-rerender": "^0.0.2"
   },
   "peerDependencies": {
     "@miniplex/core": "^2.0.0-beta.1",
