--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -26,7 +26,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "benchmark": "ts-node -O '{\"module\": \"commonjs\"}' benchmark.ts",
+    "benchmark": "tsx benchmark.ts",
     "build": "preconstruct build"
   },
   "dependencies": {
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@types/node": "^20.4.1",
     "chalk": "^4.1.2",
-    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   }
 }
