--- a/packages/miniplex-bucket/package.json
+++ b/packages/miniplex-bucket/package.json
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.1"
   }
 }
