--- a/packages/miniplex-core/package.json
+++ b/packages/miniplex-core/package.json
@@ -36,7 +36,6 @@
   "devDependencies": {
     "@types/node": "^20.4.1",
     "chalk": "^5.3.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.6"
+    "tsx": "^3.12.7"
   }
 }
