--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@miniplex/react",
+  "name": "miniplex-react",
   "author": {
     "name": "Hendrik Mans",
     "email": "hendrik@mans.de",
@@ -28,7 +28,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@miniplex/core": "2.0.0-beta.4",
+    "miniplex": "2.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -37,7 +37,7 @@
     "@hmans/use-rerender": "^0.0.2"
   },
   "peerDependencies": {
-    "@miniplex/core": "^2.0.0-beta.1",
+    "miniplex": "^2.0.0-beta.4",
     "react": ">=16.8"
   }
 }
